# aws-hackathon-content-creator-copilot

./: .gitignore  LICENSE  README.md  agentic_workflow_output.txt  config.py  ideation_output_0.txt  ideation_output_1.txt  main.py  models.py  output.txt  pyproject.toml  requirements.txt  research_output_2.txt  samconfig.toml  template.yaml
archived/: local_agent_output.txt  research_output_0.txt  research_output_1.txt  research_output_test.txt  scriptwriting_output_1.txt  scriptwriting_tool_output.txt  social_media_tool_output.txt
docs/: architecture.pdf:Zone.Identifier  architecture.png:Zone.Identifier
frontend/: index.html
prompts/: ideation_prompt.py  master_prompt.py  prompts.py  scriptwriting_prompt.py  social_media_prompt.py
repl_state/: repl_state.pkl
src/: __init__.py  _local_agent.py  _local_agent_runner.py
src/agent_worker/: app.py
src/api_handler/: app.py
src/frontend/: app.py
src/tools/file_saver/: app.py  save_package_to_file.py
src/tools/ideation/: app.py  ideation_tool.py
src/tools/ideation/prompts/: ideation_prompt.py
src/tools/research/: app.py  requirements.txt  research_tool.py  research_tool_V1.py
src/tools/scriptwriting/: app.py  scriptwriting_tool.py
src/tools/scriptwriting/prompts/: scriptwriting_prompt.py
src/tools/social_media/: app.py  social_media_tool.py
src/tools/social_media/prompts/: social_media_prompt.py
src/utils/: json_parser.py
