[project]
name = "aws-hackathon-content-creator-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.0.3",
    "boto3>=1.40.50",
    "packages>=0.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "strands-agents>=1.12.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.11",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
]
